[gd_scene load_steps=8 format=2]

[ext_resource path="res://gui/title/title_newgame.gd" type="Script" id=1]
[ext_resource path="res://assets/hills_road_sim_2022.png" type="Texture" id=2]
[ext_resource path="res://gui/title/title_main.gd" type="Script" id=3]
[ext_resource path="res://gui/customise_character/CustomiseCharacter.tscn" type="PackedScene" id=4]
[ext_resource path="res://gui/title/title.gd" type="Script" id=5]
[ext_resource path="res://themes/menu_theme/menu_theme.tres" type="Theme" id=6]
[ext_resource path="res://assets/fonts/m5x7.tres" type="DynamicFont" id=7]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
script = ExtResource( 5 )

[node name="Main" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Background" type="TextureRect" parent="Main"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 2 )
stretch_mode = 1

[node name="NewGameButton" type="Button" parent="Main"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -15.5
margin_right = 40.0
margin_bottom = 15.5
custom_fonts/font = ExtResource( 7 )
text = "Play"

[node name="NewGame" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CustomiseCharacterButton" type="Button" parent="NewGame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -62.0
margin_top = -15.5
margin_right = 62.0
margin_bottom = 15.5
text = "Customise character"

[node name="CustomiseCharacter" parent="." instance=ExtResource( 4 )]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0

[connection signal="pressed" from="Main/NewGameButton" to="Main" method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="NewGame/CustomiseCharacterButton" to="NewGame" method="_on_CustomiseCharacterButton_pressed"]
